# StadiumIQ

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY_COMPLIANCE_REPORT.md  CHANGELOG.md  CODE_QUALITY_STANDARDS.md  Dockerfile  LICENSE  Makefile  PERFORMANCE_REPORT.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE.md  TESTING_STRATEGY.md  eslint.config.js  firebase.json  firestore.rules  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml
backend/: mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  rate_limit.py  safety.py  security.py
backend/app/models/: __init__.py  assist.py  crowd.py  insights.py  match.py  navigation.py  stadium.py
backend/app/routes/: __init__.py  analytics.py  assist.py  crowd.py  health.py  insights.py  matches.py  navigation.py  stadium.py
backend/app/services/: __init__.py  bigquery_service.py  firestore_service.py  gemini_service.py  pubsub_service.py
backend/app/stadium/: __init__.py  capacity.py  language.py  navigation.py  rules.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_assist.py  test_capacity.py  test_gemini_fallback.py  test_navigation.py  test_routes.py  test_safety.py  test_scheduler.py  test_scheduler_perf.py  test_services.py  test_validation.py
client/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  CODE-QUALITY.md  JUDGE_EVIDENCE.md  PRD.md  (+4 more)
(+135 files in other folders)
