[project]
name = "stadium-iq-backend"
version = "1.0.0"
description = "StadiumIQ — AI-Powered Smart Stadium & Tournament Intelligence Platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PLC", "B", "C4", "SIM"]
ignore = ["E501", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.*", "vertexai.*", "slowapi.*", "firebase_admin.*"]
ignore_missing_imports = true
